--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,95 @@ body {
   background-image: url(images/bg-intro-desktop.png);
   background-color: #ec7476;
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", "sans-serif";
+}
+
+input {
+  all:unset
+}
+
+h1 {
+  font-size: 3.5rem;
+  line-height: 1.25;
+  margin-bottom: 1.75rem;
+}
+
+
+.container {
+   
+   display: grid;
+   justify-content: space-between;
+   grid-template-columns: 45% 45%;
+   padding: 10rem 20rem;
+   
+}
+
+.page-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.page-text > p {
+  font-size: 1.25rem;
+  line-height: 1.5;
+  margin-top: 0;
+}
+
+.cta {
+  background-color: hsl(248, 32%, 49%);
+  padding: 0.5rem 3rem;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.round-edges {
+  border-radius: 1rem;
+}
+
+.container-shadow {
+  box-shadow: 0 0.5rem rgba(0, 0, 0, 0.1);
+}
+
+.form {
+  background-color: white;
+  padding: 2rem;
+}
+
+.form-container {
+  display: grid
+}
+
+form > input {
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border: 1px solid lightgray;
+  border-radius: 0.5rem;
+  font-weight: 700;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+form > input:focus {
+  border: 1px solid black;
+}
+
+form > input:last-child {
+  background-color: hsl(154, 59%, 51%);
+  text-align: center;
+  box-shadow: inset 0 -0.3rem rgba(0, 0, 0, 0.1);
+}
+
+.terms {
+  color: lightgray;
+  font-size: 0.75rem;
+  text-align: center;
+}
+
+.terms > strong {
+  color: hsl(0, 100%, 74%);
+  cursor: pointer;
 }
