--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ form > input:last-child {
   background-color: hsl(154, 59%, 51%);
   text-align: center;
   box-shadow: inset 0 -0.3rem rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 .terms {
@@ -93,4 +94,8 @@ form > input:last-child {
 .terms > strong {
   color: hsl(0, 100%, 74%);
   cursor: pointer;
+}
+
+.error {
+  border: 1px solid red;
 }
